// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Arrow Snapshot 1`] = `
Array [
  0,
  0.02,
  0,
  0.01,
  0.1,
  0.02,
  0.1,
  0.01,
  0.1,
  0.03,
  0.1,
  0,
  0.14,
  0.015,
  0.14,
  0.015,
]
`;

exports[`Equation Symbols - Bar Snapshot 1`] = `
Array [
  0,
  0.02,
  0,
  0.01,
  -0.012,
  0.02,
  -0.012,
  0.01,
  -0.012,
  0.03,
  -0.012,
  0,
  0.028,
  0.015,
  0.028,
  0.015,
]
`;
